Footer : titre mis en h1 plutôt que h4. Menus : entrées/plats/desserts mis sur une ligne au lieu d'en escalier en format desktop. Accueil : Correction de l'alignement en format tablette. Changement format "Nouveau" en desktop. Position de la zone de clic sur l'icône coeur corrigée (zone de clic plus grande et décalée par rapport à la position de l'icône). Apparition du coeur plein au clic et non plus au survol. Commentaires ajoutés aux fichiers html afin d'expliquer le rôle de chaque section.

--- a/style/Base/_fonts.scss
+++ b/style/Base/_fonts.scss
@@ -16,10 +16,6 @@ h1 {
   font-family: shrikhand, verdana;
   text-align: center;
 }
-h4 {
-  font-family: shrikhand, verdana;
-  font-weight: lighter;
-}
 h2 {
   text-align: center;
 }
