--- a/style/Layouts/_footer.scss
+++ b/style/Layouts/_footer.scss
@@ -13,7 +13,7 @@ footer {
         width: 3px;
         color: white;
     }
-    h4 {
+    h1 {
         font-size: 1.3em;
         margin-left: 20px;
         margin-top: 15px;
