--- a/style/Pages/_smartphone_menu.scss
+++ b/style/Pages/_smartphone_menu.scss
@@ -12,18 +12,33 @@
     }
     #carte {
         background-color: $fond;
-        padding-bottom: 50px;
+        padding-bottom: 20px;
         .menu__pictures {
             text-align: center;
             position: relative;
             top: -15px;
+            img {
+                width: 100%;
+                -o-object-fit: cover;
+                object-fit: cover;
+                height: 280px;
+                margin-top: 5px;
+            }
         }
-        img {
-            width: 100%;
-            -o-object-fit: cover;
-            object-fit: cover;
-            height: 280px;
-            margin-top: 5px;
+        .coeur_menu {
+            .coeur_menu_vide {
+                position: relative;
+                top: -52px;
+                left: 315px;
+                z-index: 2;
+            }
+            .coeur_menu_plein {
+                position: relative;
+                left: 285px;
+                top: -52px;
+                width: 10px;
+                z-index: 2;
+            }
         }
         .menu__title {
             display: flex;
@@ -31,7 +46,7 @@
             border-radius: 50px 50px 0px 0px;
             background-color: $fond;
             position: relative;
-            top: -90px;
+            top: -120px;
             padding-top: 10px;
             h1 {
                 text-align: center;
@@ -39,27 +54,13 @@
                 font-weight: normal;
                 padding-left: 20px;
             }
-            .coeur_menu_vide {
-                position: relative;
-                top: 30px;
-                left: 0;
-            }
-            .coeur_menu_plein {
-                position: relative;
-                left: -29px;
-                top: 30px;
-            }
         }
         .menu {
             @include box;
             flex-direction: column;
             position: relative;
-            top: -100px;
+            top: -130px;
             margin-bottom: -90px;
-            #menu_bouton_commander {
-                margin-top: 30px;
-                margin-bottom: 20px;
-            }
         }
 
         .menu__composition {
@@ -122,7 +123,7 @@
                     width: 62px;
                     position: relative;
                     top: -40px;
-                    left: -78px;
+                    left: -77px;
                     transform: translateX(40px);
                     transition: transform 400ms ease-in;
                     .check {
@@ -195,10 +196,12 @@
             }
         }
         button {
-            width: 220px;
+            width: 210px;
             height: 60px;
             font-size: 1.1em;
             border-radius: 50px;
+            margin-top: 50px;
+            margin-bottom: 10px;
         }
         .menu__entrées {
             -webkit-animation: menu 1.4s forwards;
@@ -216,6 +219,9 @@
         }
     }
     footer {
+        h1 {
+            text-align: left;
+        }
         li {
             margin-left: -40px;
         }
